fixed padding on small phones on about me page and left aligned some text

--- a/src/app/components/skill-card/skill-card.component.scss
+++ b/src/app/components/skill-card/skill-card.component.scss
@@ -6,6 +6,7 @@
     color: black;
   }
   .skill-list-item {
+    text-align: left;
   }
 }
 .mat-list .mat-list-item {
