--- a/src/app/screens/about-page/about-me/about-me.component.scss
+++ b/src/app/screens/about-page/about-me/about-me.component.scss
@@ -2,7 +2,7 @@
 
 .about-me-container {
   // background-color: white;
-  padding: 20px;
+  // padding: 20px;
   // border-radius: 19px;
   // margin: 5px;
   text-align: center;
