--- a/src/app/screens/about-page/current-job/current-job.component.scss
+++ b/src/app/screens/about-page/current-job/current-job.component.scss
@@ -5,8 +5,7 @@
   width: 90vw;
   max-width: 500px;
   margin: 0 auto;
-
-  padding: 15px;
+  text-align: left;
 }
 
 .container {
